--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       border-radius: 5px;
       color: #ff0040; /* Default font color */
-      font-family: 'Arial', sans-serif; /* Default font family */
-      font-size: 14px; /* Default font size */
+      font-family: 'Protest Guerilla', sans-serif; /* Default font family */
+      font-size: 16px; /* Default font size */
       font-weight: bold;
       cursor: pointer;
       transition: box-shadow 0.3s;
