--- a/index.html
+++ b/index.html
@@ -145,13 +145,21 @@
       <div class="divider"></div>
     </div>
     <div id="walletStatus">
-      Wallet Not Connected
     </div>
   </div>
 
-  <script>
+<script>
     let isWalletConnected = false;
     let connectedWalletAddress = '';
+
+    // Check if wallet address is stored in localStorage
+    const storedWalletAddress = localStorage.getItem('connectedWalletAddress');
+    if (storedWalletAddress) {
+      isWalletConnected = true;
+      connectedWalletAddress = storedWalletAddress;
+      displayWalletStatus(true);
+      displayWalletAddressBox();
+    }
 
     async function toggleWalletConnection() {
       if (isWalletConnected) {
@@ -170,6 +178,9 @@
 
           if (accounts.length > 0) {
             connectedWalletAddress = accounts[0];
+            // Store the connected wallet address in localStorage
+            localStorage.setItem('connectedWalletAddress', connectedWalletAddress);
+            isWalletConnected = true;
             displayWalletStatus(true);
             displayWalletAddressBox();
           } else {
@@ -197,12 +208,14 @@
     function displayWalletAddressBox() {
       const walletAddressBox = document.getElementById('walletAddressBox');
       if (walletAddressBox) {
-        walletAddressBox.textContent = `0x...${connectedWalletAddress.slice(-4)}`;
+        walletAddressBox.textContent = `...${connectedWalletAddress.slice(-4)}`;
         walletAddressBox.onclick = isWalletConnected ? disconnectWallet : null;
       }
     }
 
     function disconnectWallet() {
+      // Remove wallet address from localStorage
+      localStorage.removeItem('connectedWalletAddress');
       alert("Please disconnect directly from your wallet.");
     }
 
